# config_app

./: CMakeLists.txt  build.bat  config_gui.py  deploy.bat  deploy_only.bat  mainwindow.cpp  mainwindow.h  serialport.cpp  serialport.h  setup_env.bat
deploy/: README.txt
